@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 1.1.0
 
 Author(s) : Juergen Knoedlseder
 
-20 January 2016
+11 February 2016
 
 
 1. Introduction
@@ -122,6 +122,11 @@ The GCTAObservation::save() method has now a special logic that decodes any
 optionally specified extension in the format [EVENTS;GTI] into an events and a
 Good Time Intervals extension name. These changes satisfy the feature request
 #1598.
+
+The GCTAEdisp2D::compute_ebounds_obs() and GCTAEdisp2::compute_ebounds_src()
+methods have been corrected so that they return the energy intervals covered by
+valid matrix elements. With the code before there were problems with not setting
+correctly the maximum energies of the intervals (#1662).
 
 
 21. COMPTEL interface
