@@ -1,8 +1,9 @@
-2016-01-18  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2016-02-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.1.0 released
         =========================
 
+        Correct GCTAEdisp2D::compute_ebounds methods (#1662)
         Use GFilename in GFits to store filename (#1649)
         Load CTA GTI extension from the HDU name provided by the DSS keyword (#1598)
 
